bynkc/tests/fixtures/negative/351_effect_result_arity/input.bynk
commons demo.arty
fn src(id: Int) -> Effect[Result[Int, String]] { Effect.pure(Ok(id)) }
fn bad(id: Int) -> Effect[Result[Int, String]] {
  src(id).mapOk()
}
